--- a/paisesdelmundo.html
+++ b/paisesdelmundo.html
@@ -49,49 +49,72 @@
                 </div>
             </div>
         </div><br>
-        <div class="container text-center">
-            <button type="button" class="btn btn-secondary" data-bs-toggle="collapse"
-                data-bs-target="#capital">Capital</button>
-            <div id="capital" class="collapse">
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil sapiente dignissimos sed temporibus
-                veniam,
-                aperiam cum quibusdam ipsum dicta doloremque consectetur rem molestias ullam odio dolorum eaque! Ipsam,
-                tempora!
-                Veniam!
+        <div id="accordion">
+            <div class="card">
+                <div class="card-header">
+                    <a class="btn btn-secondary" data-bs-toggle="collapse" href="#collapseOne" width="40px">Capital</a>
+                </div>
+                <div id="collapseOne" class="collapse hidden" data-bs-parent="#accordion">
+                    <div class="card-body">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                        laboris nisi ut aliquip ex ea commodo consequat.
+                    </div>
+                </div>
             </div>
-            <button type="button" class="btn btn-secondary" data-bs-toggle="collapse"
-                data-bs-target="#poblacion2">Población</button>
-            <div id="poblacion2" class="collapse">
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas inventore placeat, perferendis
-                asperiores
-                ducimus animi neque dolore magnam quod maxime magni sint! Officiis aliquid distinctio ullam odio dolor
-                consequuntur provident!
+            <div class="card">
+                <div class="card-header">
+                    <a class="btn btn-secondary" data-bs-toggle="collapse" href="#collapseTwo" width="40px">Población</a>
+                </div>
+                <div id="collapseTwo" class="collapse hidden" data-bs-parent="#accordion">
+                    <div class="card-body">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                        laboris nisi ut aliquip ex ea commodo consequat.
+                    </div>
+                </div>
             </div>
-            <button type="button" class="btn btn-secondary" data-bs-toggle="collapse"
-                data-bs-target="#area1">Área</button>
-            <div id="area1" class="collapse">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam nobis vitae, non voluptatibus explicabo
-                incidunt
-                ipsa nemo eaque optio totam soluta fugiat libero facilis atque deserunt velit expedita suscipit at!
+            <div class="card">
+                <div class="card-header">
+                    <a class="btn btn-secondary" data-bs-toggle="collapse" href="#collapseThree" width="40px">Área</a>
+                </div>
+                <div id="collapseThree" class="collapse hidden" data-bs-parent="#accordion">
+                    <div class="card-body">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
+                        ut
+                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                        laboris nisi ut aliquip ex ea commodo consequat.
+                    </div>
+                </div>
             </div>
-            <button type="button" class="btn btn-secondary" data-bs-toggle="collapse"
-                data-bs-target="#dominio1">Dominio</button>
-            <div id="dominio1" class="collapse">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi cum nisi doloremque quos natus, quis
-                voluptas
-                officia quas nihil maiores perspiciatis nemo consectetur nulla! Quibusdam sed cum veritatis nisi
-                suscipit.
+            <div class="card">
+                <div class="card-header">
+                    <a class="btn btn-secondary" data-bs-toggle="collapse" href="#collapseFour" width="40px">Dominio</a>
+                </div>
+                <div id="collapseFour" class="collapse hidden" data-bs-parent="#accordion">
+                    <div class="card-body">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                        incididunt ut
+                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                        ullamco
+                        laboris nisi ut aliquip ex ea commodo consequat.
+                    </div>
+                </div>
             </div>
-            <button type="button" class="btn btn-secondary" data-bs-toggle="collapse"
-                data-bs-target="#moneda1">moneda</button>
-            <div id="moneda1" class="collapse">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda labore magnam mollitia facere
-                quaerat odio
-                numquam eos reprehenderit libero veniam quia nesciunt vitae illum, blanditiis incidunt, ad accusantium
-                unde at.
-            </div>
-        </div>
-    </div><br>
+            <div class="card">
+                <div class="card-header">
+                    <a class="btn btn-secondary" data-bs-toggle="collapse" href="#collapseFive" width="40px">Moneda</a>
+                </div>
+                <div id="collapseFive" class="collapse hidden" data-bs-parent="#accordion">
+                    <div class="card-body">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                        incididunt ut
+                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                        ullamco
+                        laboris nisi ut aliquip ex ea commodo consequat.
+                    </div>
+                </div>
+            </div><br>
     <div id="accordion">
         <div class="card">
             <div class="card-header">
