--- a/Denis.html
+++ b/Denis.html
@@ -18,21 +18,21 @@
         <div class="col-sm-2"><img src="imagenes/chinchetas recortadas (1).jpg" width="200px" height="150px"
             class="rounded-circle"></div>
         <div class="col-sm-10">
-          <h1 class="text-center text-white bg-secondary p-5">PAISES DEL MUNDO</h1>
+          <h1 class="text-center text-black p-5">PAISES DEL MUNDO</h1>
         </div>
       </div>
     </header>
     <nav class="text-center">
-      <button type="button" class="btn btn-primary">Datos Generales</button>
-      <button type="button" class="btn btn-primary">Datos Geográficos</button>
-      <button type="button" class="btn btn-primary">Traducciones</button>
-      <button type="button" class="btn btn-primary">Banderas</button>
+      <button type="button" class="btn btn-success">Datos Generales</button>
+      <button type="button" class="btn btn-success">Datos Geográficos</button>
+      <button type="button" class="btn btn-success">Traducciones</button>
+      <button type="button" class="btn btn-success">Banderas</button>
     </nav>
     <div>
       <div>
         <div class="row">
           <div class="col">
-            Continente:<select name="continente" class="form-select form-select-sm">
+            <p class="h3 text-center">Continente:</p><select name="continente" class="form-select form-select-sm">
               <option value="0">Elige un continente</option>
               <option value="Africa">África</option>
               <option value="Americas">América</option>
@@ -42,79 +42,30 @@
             </select>
           </div>
           <div class="col">
-            País:<select name="pais" class="form-select form-select-sm">
+            <p class="h3 text-center">País:</p><select name="pais" class="form-select form-select-sm">
               <option value="0">Elige un país</option>
             </select>
           </div>
         </div>
       </div>
     </div><br>
-    <div id="accordion">
-      <div class="card">
-          <div class="card-header">
-              <a class="btn btn-secondary" data-bs-toggle="collapse" href="#collapseOne">Capital</a>
-          </div>
-          <div id="collapseOne" class="collapse hidden" data-bs-parent="#accordion">
-              <div class="card-body">
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-                  labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                  laboris nisi ut aliquip ex ea commodo consequat.
-              </div>
-          </div>
-      </div>
-      <div class="card">
-          <div class="card-header">
-              <a class="btn btn-secondary" data-bs-toggle="collapse" href="#collapseTwo">Población</a>
-          </div>
-          <div id="collapseTwo" class="collapse hidden" data-bs-parent="#accordion">
-              <div class="card-body">
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-                  labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                  laboris nisi ut aliquip ex ea commodo consequat.
-              </div>
-          </div>
-      </div>
-      <div class="card">
-          <div class="card-header">
-              <a class="btn btn-secondary" data-bs-toggle="collapse" href="#collapseThree">Área</a>
-          </div>
-          <div id="collapseThree" class="collapse hidden" data-bs-parent="#accordion">
-              <div class="card-body">
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
-                  ut
-                  labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                  laboris nisi ut aliquip ex ea commodo consequat.
-              </div>
-          </div>
-      </div>
-      <div class="card">
-          <div class="card-header">
-              <a class="btn btn-secondary" data-bs-toggle="collapse" href="#collapseFour">Dominio</a>
-          </div>
-          <div id="collapseFour" class="collapse hidden" data-bs-parent="#accordion">
-              <div class="card-body">
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-                  incididunt ut
-                  labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                  ullamco
-                  laboris nisi ut aliquip ex ea commodo consequat.
-              </div>
-          </div>
-      </div>
-      <div class="card">
-          <div class="card-header">
-              <a class="btn btn-secondary" data-bs-toggle="collapse" href="#collapseFive">Moneda</a>
-          </div>
-          <div id="collapseFive" class="collapse hidden" data-bs-parent="#accordion">
-              <div class="card-body">
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-                  incididunt ut
-                  labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                  ullamco
-                  laboris nisi ut aliquip ex ea commodo consequat.
-              </div>
-          </div>
-      </div><br>
+<table class="table table-stripped">
+  <tr>
+    <th class="text-center">Capital</th>
+    <th class="text-center">Población</th>
+    <th class="text-center">Dominio</th>
+    <th class="text-center">Área</th>
+    <th class="text-center">Moneda</th>
+  </tr>
+  <tr>
+    <td class="text-center">xxx</td>
+    <td class="text-center">999</td>
+    <td class="text-center">xxx</td>
+    <td class="text-center">xxx</td>
+    <td class="text-center">xxx</td>
+  </tr>
+
+</table>
   </div>
 </body>
 
