--- a/eduardo.html
+++ b/eduardo.html
@@ -54,48 +54,34 @@
                     </div>
                 </div>
             </form>
-
-        </div>
-        <div class="conteiner mt-3">
-            <button type="button" class="btn btn-secondary" data-bs-toggle="collapse" data-bs-target="#demo0">idioma1
-            </button>
-            <div id="demo1" class="collapse">
-                ESTOS SON LOS IDIOMAS
-            </div>
             <div class="conteiner mt-3">
-                <button type="button" class="btn btn-secondary" data-bs-toggle="collapse"
-                    data-bs-target="#demo1">idioma2
+                <button type="button" class="btn btn-secondary" data-bs-toggle="collapse" data-bs-target="#demo0">idioma1
+                </button>
+                <div id="demo0" class="collapse">
+                    ESTOS SON LOS IDIOMAS
+                </div>
+            
+                <button type="button" class="btn btn-secondary" data-bs-toggle="collapse" data-bs-target="#demo1">秘鲁共和国
+                </button>
+                <div id="demo1" class="collapse">
+                    CHINA, KOREA
+                </div>
+                <button type="button" class="btn btn-secondary" data-bs-toggle="collapse" data-bs-target="#demo2">idioma3
                 </button>
                 <div id="demo2" class="collapse">
                     ESTOS SON LOS IDIOMAS
                 </div>
-                <div class="conteiner mt-3">
-
-                    <button type="button" class="btn btn-secondary" data-bs-toggle="collapse"
-                        data-bs-target="#demo2">idioma3
-                    </button>
-                    <div id="demo3" class="collapse">
-                        ESTOS SON LOS IDIOMAS
-                    </div>
-
-                    <div class="conteiner mt-3">
-                        <button type="button" class="btn btn-secondary" data-bs-toggle="collapse"
-                            data-bs-target="#demo3">idioma4
-                        </button>
-                        <div id="demo4" class="collapse">
-                            ESTOS SON LOS IDIOMAS
-                        </div>
-                    </div>
-                    <div class="conteiner mt-3">
-
-                        <button type="button" class="btn btn-secondary" data-bs-toggle="collapse"
-                            data-bs-target="#demo4">idioma5
-                        </button>
-                        <div id="demo5" class="collapse">
-                            ESTOS SON LOS IDIOMAS
-                        </div>
-                    </div>
+                <button type="button" class="btn btn-secondary" data-bs-toggle="collapse" data-bs-target="#demo3">idioma4
+                </button>
+                <div id="demo3" class="collapse">
+                    ESTOS SON LOS IDIOMAS
                 </div>
+                <button type="button" class="btn btn-secondary" data-bs-toggle="collapse" data-bs-target="#demo4">idioma5
+                </button>
+                <div id="demo4" class="collapse">
+                    ESTOS SON LOS IDIOMAS
+                </div>
+            </div>
         </div>
 </body>
 
