--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
     </div>
     <!-- FIN DE LA CEBECERA!!!!!!!!!!!!!! -->
-    <div class="container">
+    <div class="d-flex flex-fill">
         <div class="d-flex align-items-start p-2">
             <div class="nav flex-column nav-tabs me-3" id="v-pills-tab" role="tablist" aria-orientation="vertical">
                 <button class="nav-link rounded active" id="v-pills-datos-tab" data-bs-toggle="pill"
@@ -106,8 +106,9 @@
                 <button class="nav-link rounded" id="v-pills-geografia-tab" data-bs-toggle="pill"
                     data-bs-target="#v-pills-geografia" type="button" role="tab" aria-controls="v-pills-geografia"
                     aria-selected="false">Geografía</button>
-                <button class="nav-link rounded" id="v-pills-idioma-tab" data-bs-toggle="pill" data-bs-target="#v-pills-idioma"
-                    type="button" role="tab" aria-controls="v-pills-idioma" aria-selected="false">Idioma</button>
+                <button class="nav-link rounded" id="v-pills-idioma-tab" data-bs-toggle="pill"
+                    data-bs-target="#v-pills-idioma" type="button" role="tab" aria-controls="v-pills-idioma"
+                    aria-selected="false">Idioma</button>
                 <button class="nav-link rounded" id="v-pills-bandera-tab" data-bs-toggle="pill"
                     data-bs-target="#v-pills-bandera" type="button" role="tab" aria-controls="v-pills-bandera"
                     aria-selected="false">Bandera</button>
@@ -129,7 +130,45 @@
                     ...kkkkk
                 </div>
                 <div class="tab-pane fade" id="v-pills-idioma" role="tabpanel" aria-labelledby="v-pills-idioma-tab">
-                    ...hhhhh
+                    <!-- PESTAÑA IDIOMAS!!!!! -->
+
+                    <div class="row p-2">
+                        <div class="col bg-light rounded">
+                            Según datos oficiales en <span id="javapais">X</span> se hablan los siguientes idiomas:
+                            <!-- Nav tabs -->
+                            <ul class="nav nav-tabs nav-fill">
+                                <li class="nav-item">
+                                    <a class="nav-link active" data-bs-toggle="tab" href="#idioma1">
+                                        <span class="list-group-item d-flex justify-content-between align-items-center">
+                                            Inglés
+                                            <span class="badge bg-primary rounded-pill">
+                                                12
+                                            </span>
+                                        </span>
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" data-bs-toggle="tab" href="#idioma2">
+                                        <span class="list-group-item d-flex justify-content-between align-items-center">
+                                            Chino
+                                            <span class="badge bg-primary rounded-pill">
+                                                76
+                                            </span>
+                                        </span>
+                                    </a>
+                                </li>
+                            </ul>
+
+                            <!-- Tab panes -->
+                            <div class="tab-content">
+                                <div class="tab-pane container active" id="idioma1">Reino unido, América</div>
+                                <div class="tab-pane container fade" id="idioma2">China</div>
+                            </div>
+
+                        </div>
+                    </div>
+
+
                 </div>
                 <div class="tab-pane fade" id="v-pills-bandera" role="tabpanel" aria-labelledby="v-pills-bandera-tab">
                     ...rrrrrr
