--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="https://code.jquery.com/jquery-3.6.1.min.js" ></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" ></script>
     
+    <link rel="styleshett" hreff="css/estilo.css">
 </head>
 
 <body>
@@ -45,11 +46,10 @@
               </nav>
         </header>
         <section>
-
             <div class="tab-content">
                 <div class="tab-pane face show active" id="generales">
-                    <div class="row">
-                        <div class="col">
+                    <div class="">
+                        <div >
                             <div style="width:120px; float: left;">
                                 <label for="continente" class="fs-5"><b>Continente:</b></label>
                             </div>
@@ -65,7 +65,7 @@
                                 </select>
                             </div>
                         </div>
-                        <div class="col">
+                        <div >
                             <div style="width:120px; float: left;">
                                 <label for="pais" class="fs-5"><b>Pais:</b></label>
                             </div>
@@ -82,23 +82,23 @@
                             
                         </div>
                     </div>
-                    <div class="mx-auto w-50 mt-3 container-fluid">
+                    <!--<div class="mx-auto w-50 mt-3 container-fluid">
                         <table class="w-100">
                           <tr>
                             <td>
-                              <h3 class="mx-auto">Capital: xxxxxxx</h3>
+                              <h3 class="mx-auto">Capital: </h3>
                             </td>
                             <td></td>
                           </tr>
                           <tr>
                             <td>
-                              <h3>Población: 9999999999</h3>
+                              <h3>Población: </h3>
                             </td>
                             <td></td>
                           </tr>
                           <tr>
                             <td>
-                              <h3>Población: 99999999999</h3>
+                              <h3>Población: </h3>
                             </td>
                             <td></td>
                           </tr>
@@ -123,7 +123,7 @@
                             </td>
                           </tr>
                         </table>
-                      </div>
+                      </div>-->
                 </div>
             </div>
         </section>
