--- a/adan.html
+++ b/adan.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Grupo 4</title>
+    <title>Grupo 4 adan</title>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" >
     <script src="https://code.jquery.com/jquery-3.6.1.min.js" ></script>
@@ -29,8 +29,25 @@
  
         
       </nav>
+
  
    </header>
+   <main class="container-fluid nav-justified">
+    <ul class="nav nav-tabs">
+        <li class="nav-item">
+          <a class="nav-link active" href="#">DATOS GENERALES</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">DATOS GEORGAFICOS</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">TRADUCCION</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">BANDERA</a>
+        </li>
+      </ul> 
+   </main>
 </div>
 </body>
 </html>
